# Travel_Journal

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0104b3d1ed42_create_trip_table.py  b3ed22948477_create_trip_table.py  b84543f0c685_create_trip_tables.py
backend/app/: main.py
backend/app/core/: config.py  database.py  security.py
backend/src/: main.py
backend/src/core/: security.py
backend/src/db/: session.py
backend/src/models/: __init__.py  photo.py  place.py  trip.py  user.py
backend/src/router/api/: deps.py
backend/src/router/api/v1/: api.py
backend/src/router/api/v1/endpoints/: auth.py  trips.py
backend/src/schemas/: trip.py  user.py
frontend/: Dockerfile  package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/trips/: page.tsx
frontend/app/trips/[id]/: page.tsx
frontend/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/components/trip/: TripCard.tsx
frontend/components/ui/: DeleteModal.tsx  Modal.tsx
frontend/lib/: api.ts  types.ts
